# mahbot

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: resolution-mahbot-717.md
prompt/: analyze.md  maintain.md  notification.md  qa.md
prompt/discovery/: analyst.md  coder.md  diagnostics.md  engineer.md  maintainer.md  reviewer.md
prompt/extraction/: diagnostics.md  qa.md  reviewer.md
prompt/role/: analyst.md  artist.md  discovery.md  engineer.md  maintainer.md  reviewer.md
prompt/summarize/: discovery.md  engineer.md  reviewer.md
prompt/tool/: add_comment.md  ask.md  create_ticket.md  edit.md  get_ticket.md  image_gen.md  list_tickets.md  shell.md  update_ticket.md  video_gen.md  web_search.md
src/: agent.rs  audio_preprocessor.rs  board.rs  board_tests.rs  chat_history.rs  checkpoint.rs  config.rs  config_db.rs  debug.rs  diff_parse.rs  embedder.rs  extraction.rs  git_commands.rs  lib.rs  logs.rs  main.rs  maintainer.rs  management.rs  management_tests.rs  manager_queue.rs  message_router.rs  prompt.rs  registry.rs  role.rs  search_engine.rs  self_update.rs  shutdown.rs  skills.rs  stats.rs  ticket_buffer.rs  tts.rs  tts_data_gen.rs  turso.rs  users.rs  vector.rs  voice.rs  voice_pipeline_e2e_test.rs  voice_verifier.rs  wake_word_classifier.rs  workspace.rs
src/channels/: enrichment.rs  gui.rs  mod.rs  telegram.rs  telegram_tests.rs  voice.rs
src/gui/: board.rs  common.rs  context_menu.rs  diff.rs  diff_widget.rs  editor.rs  editor_tests.rs  editor_widget.rs  editor_widget_tests.rs  git.rs  highlight.rs  home.rs  logs.rs  media_markers.rs  mod.rs  sessions.rs  settings.rs  shell.rs  text_rendering.rs  theme.rs  tool_failures.rs  users.rs  widget_helpers.rs  widgets.rs  workspaces.rs
src/gui/editor/: editor_dialog.rs
src/prompt/: maintain.md  notification.md  review.md  sanitation.md  skills.md  ticket.md  warning.md  workspace.md
src/prompt/analyze/: maintainer_ticket.md  manager_ticket.md
src/prompt/discovery/: analyst.md  maintainer.md  manager.md  qa.md  sanitation.md
src/prompt/extraction/: analyst.md  retry.md  sanitation.md
src/prompt/role/: assistant.md  coder.md  discovery.md  manager.md  qa.md  reviewer.md  sanitation.md
src/prompt/summarize/: analyst.md  artist.md  assistant.md  coder.md  discovery.md  engineer.md  maintainer.md  manager.md  omit.md  qa.md  reviewer.md  sanitation.md  template.md
src/prompt/tool/: browser.md  create_ticket.md  get_ticket.md  list_tickets.md  read.md  search.md  search_archived_tickets.md  update_ticket.md
src/providers/: compatible.rs  compatible_streaming.rs  error.rs  local_transcriber.rs  mod.rs  reasoning.rs  reasoning_roundtrip.rs  reliable.rs  transcribe.rs
src/session/: manager.rs  mod.rs  summarization.rs
src/tools/: ask.rs  browser.rs  edit.rs  exa_search.rs  image_gen.rs  mod.rs  path.rs  read.rs  search.rs  search_archived_tickets.rs  ticket.rs  video_gen.rs  web_search.rs  web_search_shared.rs
src/tools/shell/: mod.rs  profiles.rs  readonly.rs
src/util/: error.rs  html.rs  http.rs  json.rs  macros.rs  mod.rs  test.rs  tree_sitter.rs
src/voice/: voice_test_harness.rs
tests/fixtures/summarize/: analyst.md  artist.md  coder.md  manager.md  qa.md
tickets/: mahbot-381.md
